fixed instagram alignments on about page

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -348,6 +348,11 @@ form{
 	.wdi_feed_wrapper {
 		background-color: transparent !important;
 	}
+
+	.wdi_user_img_wrap {
+		display: none !important;
+	}
+
 	.wdi_feed_container {
 		background: transparent !important;
 		border-bottom-width: 0px !important;
@@ -369,8 +374,8 @@ form{
 				border-radius: 5px !important;
 			}
 			 img {
-				 width: 170px;
-				 height: 170px;
+				 width: 210px;
+				 height: 210px;
 				 object-fit: cover;
 			 }
 		}
